3. Уникальность элементов и сортировка.